Bug 121326 - Tab navigation should skip toolboxes with no enabled or visible items
Summary: Tab navigation should skip toolboxes with no enabled or visible items
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
6.2.0.0.alpha1+
Hardware: All All
: medium normal
Assignee: Jim Raykowski
URL:
Whiteboard: target:6.3.0
Keywords:
Depends on:
Blocks:
 
Reported: 2018-11-10 04:05 UTC by Jim Raykowski
Modified: 2018-12-02 21:17 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Properties panel tab stop test file (149.88 KB, application/vnd.oasis.opendocument.presentation)
2018-11-10 04:05 UTC, Jim Raykowski
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jim Raykowski 2018-11-10 04:05:54 UTC
Created attachment 146519 [details]
Properties panel tab stop test file

To repro:

1) open the attached impress file
2) open the side bar (Menu > View > Sidebar)
3) mouse click on the Properties deck tab in the sidebar tab bar
4) mouse click on the smiley face or oval shape in the test document
5) mouse click on Paragraph panel title in the sidebar
focus rectangle is around Paragraph panel title
6) Tab Tab Tab
Window version - focus moves to write direction toolbox with no visible items.
Linux version - focus moves to write direction toolbox with no enabled items.
7) Tab
Windows version - focus moves to vertical alignment toolbox as expected
Linux version - focus moves back to horizontal alignment toolbox as can be seen by pressing the Left Arrow key

Expected results - Tab navigation should skip toolboxes with no enabled or visible items

The bug here may be that the Paragraph properties panel toolboxes are not behaving correctly based on the current selection context.
Even so, tab navigation should move over toolboxes if there are no visible or enabled items.

Version: 6.2.0.0.alpha1+
Build ID: b274e879bdbed85c9373e90e6998cabe22b5bd3a
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk2; 
Locale: en-US (en_US.UTF-8); Calc: threaded

Version 6.2.0.0.alpha1+
Build ID: 397dd8a5f7694540f31f32759c2c915d63506ccd
CPU threads: 4; OS: Windows 10.0; UI render: default; VCL: win; 
TinderBox: Win-x86@42; Branch:master, Time: 2018-11-07_23:58:04
Locale: en-US (en_US); Calc: threaded
Comment 1 Jim Raykowski 2018-11-16 01:54:42 UTC
Here is a patch:
https://gerrit.libreoffice.org/#/c/63457/
Comment 2 Commit Notification 2018-11-22 21:10:26 UTC
Jim Raykowski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/af16e73d786ed22fe102bd173ea555630a49a832%5E%21

tdf#121326 Don't tab stop at toolboxes with no visible or enabled items

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.