tdf#121326 Don't tab stop at toolboxes with no visible or enabled items

Change-Id: I4d20bafbda9e6b675654d0359421cf9e57712d15